--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "ts-node": "^6.0.3"
+    "ts-node": "^6.0.3",
+    "typescript": "^2.8.1"
   }
 }
