updating package & stuff for boiler plate commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rs-doctor-finder",
+  "name": "typescript-react-node-app",
   "version": "1.0.0",
   "description": "",
   "engines": {
