--- a/react-app/package.json
+++ b/react-app/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "bad-ass-salesforce-stack",
+  "name": "typescript-react-app",
   "version": "0.1.0",
-  "description": "React, Redux, Typescript, antd, ts-force, sfdx starter",
+  "description": "",
   "author": "Charlie Jonas",
-  "homepage": "https://github.com/ChuckJonas/bad-ass-salesforce-stack",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ChuckJonas/bad-ass-salesforce-stack.git"
-  },
-  "bugs": "https://github.com/ChuckJonas/bad-ass-salesforce-stack/issues",
-  "license": "MIT",
   "main": "dist/app.js",
   "scripts": {
     "start": "webpack-dashboard -m -- webpack-dev-server --config config/webpack.config.js --open --env.local --hot",
