--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-app/node_modules"
   ],
   "dependencies": {
+    "@types/express": "^4.16.0",
     "@types/node": "^10.1.2",
     "express": "^4.16.3"
   },
@@ -34,6 +35,6 @@
   "devDependencies": {
     "nodemon": "^1.17.4",
     "ts-node": "^6.0.3",
-    "typescript": "^2.8.1"
+    "typescript": "^3.1.6"
   }
 }
